Fix horizontal scroll z-index issue

--- a/stylesheets/ember-table.less
+++ b/stylesheets/ember-table.less
@@ -81,7 +81,8 @@
   // Top, left, height and width defined dynamically through JS
   // Override antiscroll-wrapper position relative
   position: absolute;
-  z-index: 1;
+  z-index: 5;
+  bottom: 0;
   .box-sizing();
 }
 
